--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <meta name="description" content="¡Bienvenido a mi Portafolio!. Soy Franco Javier Nieva, explora mis proyectos personales y grupales. Conoce mi formación académica y mucho más.">
     <!--BOOTSTRAP  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <!-- FAVICON -->
+    <link rel="shortcut icon" href="./img/foto-perfil.png" type="image/x-icon">
+    <!-- GOOGLE FONT - TITLE -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap" rel="stylesheet">
+    <!-- GOOGLE FONT - TEXT -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <!-- LINK CSS -->
     <link rel="stylesheet" href="./css/style.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -16,21 +26,21 @@
 <body>
     <header>
         <!-- Navbar -->
-        <section class="">
-            <div class="" data-aos="fade-right">
-                <h1>¡Hola!</h1>
-                <h2>Soy Franco Javier Nieva</h2>
+        <section class="presentation-container container pt-4 d-lg-flex justify-content-lg-around align-items-lg-center">
+            <div class="presentation-info " data-aos="fade-right">
+                <h1 class="hello">¡Hola!</h1>
+                <h2 class="my-name-title">Soy Franco Javier Nieva</h2>
                 <p class="mb-0">Estudiante Universitario</p>
                 <p>Estudiante Full Stack Developer</p>
-                <figure class="">
-                    <a href="https://github.com/francojnieva" target="_blank" title="Github"><img class="logo-github" src="./img/icon-github.png" alt="logo de github" ></a>
-                    <a href="https://www.linkedin.com/in/franco-javier-nieva" target="_blank" title="LinkedIn"><img src="./img/3225190_app_linkedin_logo_media_popular_icon.png" alt="logo de linkedin"></a>
-                    <a href="https://www.instagram.com/franconieva.97" target="_blank" title="Instagram"><img src="./img/instagram.png" alt="logo de instagram"></a>
-                    <a href="mailto:franco97nieva@gmail.com" target="_blank" title="Gmail"><img src="./img/2400853_gmail_google_ico_media_photo add_icon.png" alt="logo de correo gmail"></a>
+                <figure class="links-container">
+                    <a href="https://github.com/francojnieva" target="_blank" title="Github"><img class="logo-github" src="./img/github-icon.svg" alt="logo de github" ></a>
+                    <a href="https://www.linkedin.com/in/francojnieva" target="_blank" title="LinkedIn"><img src="./img/linkedin-icon.svg" alt="logo de linkedin"></a>
+                    <a href="https://www.instagram.com/franconieva.97" target="_blank" title="Instagram"><img src="./img/instagram-icon.svg" alt="logo de instagram"></a>
+                    <a href="mailto:franco97nieva@gmail.com" target="_blank" title="Gmail"><img src="./img/gmail-icon.svg" alt="logo de correo gmail"></a>
                 </figure>
             </div>
-            <div class="" data-aos="fade-left">
-                <img src="" alt="Foto de perfil de Franco Nieva"
+            <div class="presentation-photo d-flex justify-content-center" data-aos="fade-left">
+                <img src="./img/foto-perfil.png" alt="Foto de perfil de Franco Nieva"
                 title="Nieva Franco Javier">
             </div>
         </section>
@@ -42,9 +52,7 @@
         </section>
         <section>
             <h2>Habilidades/Conocimientos</h2>
-            <article>
-                <!-- cards con los iconos -->
-            </article>
+            <article></article>
         </section>
         <section>
             <h2>Formación</h2>
@@ -60,7 +68,7 @@
         </section>
         <section>
             <h2>Contacto</h2>
-            <form action="#" method="post">
+            <!-- <form action="#" method="post">
                 <p>¿Quieres contactarme?. Complete el siguiente formulario y me pondré en contacto con usted lo antes posible. Muchas gracias.</p>
                 <label for="name"></label>
                 <input type="text" name="name" id="name" placeholder="Nombre" required autocomplete="off">
@@ -73,7 +81,7 @@
                 <div>
                     <input type="submit" value="Enviar">
                 </div>
-            </form>
+            </form> -->
         </section>
     </main>
     <footer class="text-center p-3">
