:art: add bootstrap class, styles and add content about me

--- a/index.html
+++ b/index.html
@@ -39,35 +39,36 @@
                     <a href="mailto:franco97nieva@gmail.com" target="_blank" title="Gmail"><img src="./img/gmail-icon.svg" alt="logo de correo gmail"></a>
                 </figure>
             </div>
-            <div class="presentation-photo d-flex justify-content-center" data-aos="fade-left">
+            <div class="presentation-photo d-flex justify-content-center mb-5" data-aos="fade-left">
                 <img src="./img/foto-perfil.png" alt="Foto de perfil de Franco Nieva"
                 title="Nieva Franco Javier">
             </div>
         </section>
     </header>
-    <main>
-        <section>
-            <h2>Sobre mi</h2>
-            <article>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima voluptatibus eveniet consequatur tempora excepturi in ea, ut quaerat quas nulla corrupti iste quam sunt fugiat! Eveniet excepturi libero ut blanditiis?</article>
+    <main class="container">
+        <section class="text-center about-me-container mb-4 container">
+            <h2 class="fs-1 title-h2 mb-4">Sobre mi</h2>
+            <p>Soy de la provincia de Tucumán - Argentina. Estudiante en Rolling Code School en el curso de Full Stack Developer MERN.</p>
+            <p>Responsable, disciplinado, empático, me gusta trabajar en equipo y aprender de los demás. Aspiro a poder conseguir mi primer trabajo en el mundo IT que tanto me apasiona.</p>
         </section>
-        <section>
-            <h2>Habilidades/Conocimientos</h2>
+        <section class="text-center text-white-50">
+            <h2 class="title-h2 fs-1">Habilidades/Conocimientos</h2>
             <article></article>
         </section>
-        <section>
-            <h2>Formación</h2>
+        <section class="text-center text-white-50">
+            <h2 class="title-h2 fs-1">Formación</h2>
             <article>
                 
             </article>
         </section>
-        <section>
-            <h2>Proyectos</h2>
+        <section class="text-center text-white-50">
+            <h2 class="title-h2 fs-1">Proyectos</h2>
             <article>
                 <!-- Acá se renderizan las card con los proyectos -->
             </article>
         </section>
-        <section>
-            <h2>Contacto</h2>
+        <section class="text-center">
+            <h2 class="title-h2 fs-1">Contacto</h2>
             <!-- <form action="#" method="post">
                 <p>¿Quieres contactarme?. Complete el siguiente formulario y me pondré en contacto con usted lo antes posible. Muchas gracias.</p>
                 <label for="name"></label>
@@ -84,7 +85,7 @@
             </form> -->
         </section>
     </main>
-    <footer class="text-center p-3">
+    <footer class="text-center p-3 text-white-50">
         <small>Desarrollado por Franco Javier Nieva - 2023</small>
     </footer>
     <!--BOOTSTRAP  -->
