:hammer::lipstick: add rendering and styles in skills section

--- a/index.html
+++ b/index.html
@@ -52,14 +52,12 @@
             <p>Responsable, disciplinado, empático, me gusta trabajar en equipo y aprender de los demás. Aspiro a poder conseguir mi primer trabajo en el mundo IT que tanto me apasiona.</p>
         </section>
         <section class="text-center text-white-50">
-            <h2 class="title-h2 fs-1">Habilidades/Conocimientos</h2>
-            <article></article>
+            <h2 class="title-h2 fs-1 mb-4">Habilidades/Conocimientos</h2>
+            <article id="training-container" class="d-flex flex-wrap justify-content-around gap-3 mb-4"></article>
         </section>
         <section class="text-center text-white-50">
             <h2 class="title-h2 fs-1">Formación</h2>
-            <article>
-                
-            </article>
+            <article></article>
         </section>
         <section class="text-center text-white-50">
             <h2 class="title-h2 fs-1">Proyectos</h2>
@@ -96,6 +94,7 @@
         AOS.init({
             duration: 1000
         });
-    </script>
+        </script>
+    <script src="./js/skills.js"></script>
 </body>
 </html>
