:hammer::lipstick: add rendering and styles in training section, change name of files JS. and add new images

--- a/index.html
+++ b/index.html
@@ -47,17 +47,17 @@
     </header>
     <main class="container">
         <section class="text-center about-me-container mb-4 container">
-            <h2 class="fs-1 title-h2 mb-4">Sobre mi</h2>
+            <h2 class="fs-1 title-h2 m-5">Sobre mi</h2>
             <p>Soy de la provincia de Tucumán - Argentina. Estudiante en Rolling Code School en el curso de Full Stack Developer MERN.</p>
             <p>Responsable, disciplinado, empático, me gusta trabajar en equipo y aprender de los demás. Aspiro a poder conseguir mi primer trabajo en el mundo IT que tanto me apasiona.</p>
         </section>
         <section class="text-center text-white-50">
-            <h2 class="title-h2 fs-1 mb-4">Habilidades/Conocimientos</h2>
-            <article id="training-container" class="d-flex flex-wrap justify-content-around gap-3 mb-4"></article>
+            <h2 class="title-h2 fs-1 m-5">Conocimientos y Tecnologías</h2>
+            <article id="technologies-container" data-aos="fade-up" class="d-flex flex-wrap justify-content-around gap-3 mb-4"></article>
         </section>
         <section class="text-center text-white-50">
-            <h2 class="title-h2 fs-1">Formación</h2>
-            <article></article>
+            <h2 class="title-h2 fs-1 m-5">Formación</h2>
+            <article id="training-container" class="d-flex flex-wrap justify-content-evenly align-items-center "></article>
         </section>
         <section class="text-center text-white-50">
             <h2 class="title-h2 fs-1">Proyectos</h2>
@@ -95,6 +95,7 @@
             duration: 1000
         });
         </script>
-    <script src="./js/skills.js"></script>
+    <script src="./js/technologies.js"></script>
+    <script src="./js/training.js"></script>
 </body>
 </html>
