--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="¡Bienvenido a mi Portafolio!. Soy Franco Javier Nieva, explora mis proyectos personales y grupales. Conoce mi formación académica y mucho más.">
     <!--BOOTSTRAP  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <!-- FAVICON -->
     <link rel="shortcut icon" href="./img/foto-perfil.png" type="image/x-icon">
     <!-- GOOGLE FONT - TITLE -->
@@ -51,22 +52,20 @@
             <p>Soy de la provincia de Tucumán - Argentina. Estudiante en Rolling Code School en el curso de Full Stack Developer MERN.</p>
             <p>Responsable, disciplinado, empático, me gusta trabajar en equipo y aprender de los demás. Aspiro a poder conseguir mi primer trabajo en el mundo IT que tanto me apasiona.</p>
         </section>
-        <section class="text-center text-white-50">
+        <section class="text-center">
             <h2 class="title-h2 fs-1 m-5">Conocimientos y Tecnologías</h2>
-            <article id="technologies-container" data-aos="fade-up" class="d-flex flex-wrap justify-content-around gap-3 mb-4"></article>
-        </section>
-        <section class="text-center text-white-50">
-            <h2 class="title-h2 fs-1 m-5">Formación</h2>
-            <article id="training-container" class="d-flex flex-wrap justify-content-evenly align-items-center "></article>
-        </section>
-        <section class="text-center text-white-50">
-            <h2 class="title-h2 fs-1">Proyectos</h2>
-            <article>
-                <!-- Acá se renderizan las card con los proyectos -->
-            </article>
+            <article id="technologies-container" data-aos="fade-up" class="d-flex flex-wrap justify-content-around gap-3 mb-3"></article>
         </section>
         <section class="text-center">
-            <h2 class="title-h2 fs-1">Contacto</h2>
+            <h2 class="title-h2 fs-1 m-5">Formación</h2>
+            <article id="training-container" class="d-flex flex-wrap justify-content-evenly align-items-center gap-3"></article>
+        </section>
+        <section class="text-center">
+            <h2 class="title-h2 fs-1 mb-4">Proyectos</h2>
+            <article id="project-container" class="p-2 d-lg-flex gap-lg-3 flex-lg-wrap justify-content-lg-around"></article>
+        </section>
+        <section class="text-center ">
+            <h2 class="title-h2 fs-1 m-5">Contacto</h2>
             <!-- <form action="#" method="post">
                 <p>¿Quieres contactarme?. Complete el siguiente formulario y me pondré en contacto con usted lo antes posible. Muchas gracias.</p>
                 <label for="name"></label>
@@ -97,5 +96,6 @@
         </script>
     <script src="./js/technologies.js"></script>
     <script src="./js/training.js"></script>
+    <script src="./js/projects.js"></script>
 </body>
 </html>
