:art: add new images, styles about projects and add link in header

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
     <title>Portafolio - Franco Javier Nieva</title>
 </head>
 <body>
-    <header>
+    <header class="d-flex align-items-center justify-content-md-center">
         <!-- Navbar -->
-        <section class="presentation-container container pt-4 d-lg-flex justify-content-lg-around align-items-lg-center">
+        <section class="presentation-container container d-lg-flex justify-content-lg-evenly align-items-lg-center">
             <div class="presentation-info " data-aos="fade-right">
                 <h1 class="hello">¡Hola!</h1>
                 <h2 class="my-name-title">Soy Franco Javier Nieva</h2>
@@ -39,8 +39,11 @@
                     <a href="https://www.instagram.com/franconieva.97" target="_blank" title="Instagram"><img src="./img/instagram-icon.svg" alt="logo de instagram"></a>
                     <a href="mailto:franco97nieva@gmail.com" target="_blank" title="Gmail"><img src="./img/gmail-icon.svg" alt="logo de correo gmail"></a>
                 </figure>
+                <div class="m-4 m-lg-0">
+                    <a download href="" class="btn">Descargar CV</a>
+                </div>
             </div>
-            <div class="presentation-photo d-flex justify-content-center mb-5" data-aos="fade-left">
+            <div class="presentation-photo d-flex justify-content-center" data-aos="fade-left">
                 <img src="./img/foto-perfil.png" alt="Foto de perfil de Franco Nieva"
                 title="Nieva Franco Javier">
             </div>
@@ -48,7 +51,7 @@
     </header>
     <main class="container">
         <section class="text-center about-me-container mb-4 container">
-            <h2 class="fs-1 title-h2 m-5">Sobre mi</h2>
+            <h2 class="fs-1 title-h2 mb-4">Sobre mi</h2>
             <p>Soy de la provincia de Tucumán - Argentina. Estudiante en Rolling Code School en el curso de Full Stack Developer MERN.</p>
             <p>Responsable, disciplinado, empático, me gusta trabajar en equipo y aprender de los demás. Aspiro a poder conseguir mi primer trabajo en el mundo IT que tanto me apasiona.</p>
         </section>
@@ -57,7 +60,7 @@
             <article id="technologies-container" data-aos="fade-up" class="d-flex flex-wrap justify-content-around gap-3 mb-3"></article>
         </section>
         <section class="text-center">
-            <h2 class="title-h2 fs-1 mb-4">Proyectos</h2>
+            <h2 class="title-h2 fs-1 m-5">Proyectos</h2>
             <article id="project-container" class="p-2 d-lg-flex gap-lg-3 flex-lg-wrap justify-content-lg-around"></article>
         </section>
         <section class="text-center ">
