--- a/index.html
+++ b/index.html
@@ -25,10 +25,35 @@
     <title>Portafolio - Franco Javier Nieva</title>
 </head>
 <body>
-    <header class="d-flex align-items-center justify-content-md-center">
-        <!-- Navbar -->
-        <section class="presentation-container container d-lg-flex justify-content-lg-evenly align-items-lg-center">
-            <div class="presentation-info " data-aos="fade-right">
+    <header class="d-flex flex-column justify-content-md-center pt-3">
+        <nav class="navbar navbar-expand-lg mb-4 mb-lg-5">
+            <div class="container-fluid container-md">
+                <div class="container-fluid d-flex justify-content-between align-items-center ">
+                    <a class="navbar-brand" href="#"><img src="./img/foto-perfil.png" alt="Foto de perfil de Franco Nieva" title="Nieva Franco Javier" class="rounded-circle  nav-img"></a>
+                    <button class="navbar-toggler bg-light border-0" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                    </button>
+                </div>
+                <div class="collapse navbar-collapse text-center w-100 rounded-4" id="navbarNav">
+                    <ul class="navbar-nav d-lg-flex justify-content-lg-between align-items-lg-center w-100">
+                        <li class="nav-item m-2">
+                            <a class="nav-link text-white" href="#aboutMe">Sobre mi</a>
+                        </li>
+                        <li class="nav-item m-2">
+                            <a class="nav-link text-white" href="#technologies">Conocimientos y Tecnologías</a>
+                        </li>
+                        <li class="nav-item m-2">
+                            <a class="nav-link text-white" href="#project">Proyectos</a>
+                        </li>
+                        <li class="nav-item m-2">
+                            <a class="nav-link text-white" href="#contact">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <section class="presentation-container container-lg d-lg-flex justify-content-lg-evenly align-items-lg-center pt-5 mb-5">
+            <div class="presentation-info container-lg" data-aos="fade-right">
                 <h1 class="hello">¡Hola!</h1>
                 <h2 class="my-name-title">Soy Franco Javier Nieva</h2>
                 <p class="mb-0">Estudiante Universitario</p>
@@ -40,7 +65,7 @@
                     <a href="mailto:franco97nieva@gmail.com" target="_blank" title="Gmail"><img src="./img/gmail-icon.svg" alt="logo de correo gmail"></a>
                 </figure>
                 <div class="m-4 m-lg-0">
-                    <a download href="" class="btn">Descargar CV</a>
+                    <a download href="" class="btn"><i class="bi bi-file-earmark-person"></i> Descargar CV</a>
                 </div>
             </div>
             <div class="presentation-photo d-flex justify-content-center" data-aos="fade-left">
@@ -50,21 +75,21 @@
         </section>
     </header>
     <main class="container">
-        <section class="text-center about-me-container mb-4 container">
-            <h2 class="fs-1 title-h2 mb-4">Sobre mi</h2>
+        <section class="text-center about-me-container mb-4 container" id="aboutMe">
+            <h2 class="fs-1 title-h2 mt-5 mb-4">Sobre mi</h2>
             <p>Soy de la provincia de Tucumán - Argentina. Estudiante en Rolling Code School en el curso de Full Stack Developer MERN.</p>
             <p>Responsable, disciplinado, empático, me gusta trabajar en equipo y aprender de los demás. Aspiro a poder conseguir mi primer trabajo en el mundo IT que tanto me apasiona.</p>
         </section>
-        <section class="text-center">
-            <h2 class="title-h2 fs-1 m-5">Conocimientos y Tecnologías</h2>
-            <article id="technologies-container" data-aos="fade-up" class="d-flex flex-wrap justify-content-around gap-3 mb-3"></article>
+        <section class="text-center" id="technologies">
+            <h2 class="title-h2 fs-1 mt-5 mb-4">Conocimientos y Tecnologías</h2>
+            <article id="technologies-container" data-aos="fade-up" class="d-flex flex-wrap justify-content-evenly gap-3 mb-3"></article>
         </section>
-        <section class="text-center">
-            <h2 class="title-h2 fs-1 m-5">Proyectos</h2>
+        <section class="text-center" id="project">
+            <h2 class="title-h2 fs-1 mt-5 mb-4">Proyectos</h2>
             <article id="project-container" class="p-2 d-lg-flex gap-lg-3 flex-lg-wrap justify-content-lg-around"></article>
         </section>
-        <section class="text-center ">
-            <h2 class="title-h2 fs-1 m-5">Contacto</h2>
+        <section class="text-center" id="contact">
+            <h2 class="title-h2 fs-1 mt-2 mb-4">Contacto</h2>
             <!-- <form action="#" method="post">
                 <p>¿Quieres contactarme?. Complete el siguiente formulario y me pondré en contacto con usted lo antes posible. Muchas gracias.</p>
                 <label for="name"></label>
@@ -81,7 +106,7 @@
             </form> -->
         </section>
     </main>
-    <footer class="text-center p-3 text-white-50">
+    <footer class="text-center p-3 text-white-50 bg-gradient">
         <small>Desarrollado por Franco Javier Nieva - 2023</small>
     </footer>
     <!--BOOTSTRAP  -->
