:lipstick::fire: change style in card about technologies and delete the last prop of object projects

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <nav class="navbar navbar-expand-lg mb-4 mb-lg-5">
             <div class="container-fluid container-md">
                 <div class="container-fluid d-flex justify-content-between align-items-center ">
-                    <a class="navbar-brand" href="#"><img src="./img/foto-perfil.png" alt="Foto de perfil de Franco Nieva" title="Nieva Franco Javier" class="rounded-circle  nav-img"></a>
+                    <a class="navbar-brand" href="./index.html"><img src="./img/foto-perfil.png" alt="Foto de perfil de Franco Nieva" title="Nieva Franco Javier" class="rounded-circle  nav-img"></a>
                     <button class="navbar-toggler bg-light border-0" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                     </button>
@@ -37,16 +37,16 @@
                 <div class="collapse navbar-collapse text-center w-100 rounded-4" id="navbarNav">
                     <ul class="navbar-nav d-lg-flex justify-content-lg-between align-items-lg-center w-100">
                         <li class="nav-item m-2">
-                            <a class="nav-link text-white" href="#aboutMe">Sobre mi</a>
+                            <a class="nav-link" href="#aboutMe">Sobre mi</a>
                         </li>
                         <li class="nav-item m-2">
-                            <a class="nav-link text-white" href="#technologies">Conocimientos y Tecnologías</a>
+                            <a class="nav-link" href="#technologies">Conocimientos y Tecnologías</a>
                         </li>
                         <li class="nav-item m-2">
-                            <a class="nav-link text-white" href="#project">Proyectos</a>
+                            <a class="nav-link" href="#project">Proyectos</a>
                         </li>
                         <li class="nav-item m-2">
-                            <a class="nav-link text-white" href="#contact">Contacto</a>
+                            <a class="nav-link" href="#contact">Contacto</a>
                         </li>
                     </ul>
                 </div>
@@ -74,7 +74,7 @@
             </div>
         </section>
     </header>
-    <main class="container">
+    <main class="container container-main">
         <section class="text-center about-me-container mb-4 container" id="aboutMe">
             <h2 class="fs-1 title-h2 mt-5 mb-4">Sobre mi</h2>
             <p>Soy de la provincia de Tucumán - Argentina. Estudiante en Rolling Code School en el curso de Full Stack Developer MERN.</p>
@@ -106,7 +106,7 @@
             </form> -->
         </section>
     </main>
-    <footer class="text-center p-3 text-white-50 bg-gradient">
+    <footer class="text-center p-3 text-white bg-gradient">
         <small>Desarrollado por Franco Javier Nieva - 2023</small>
     </footer>
     <!--BOOTSTRAP  -->
