--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <h2 class="title-h2 fs-1 mb-3">Contacto</h2>
             <p class="text-white-50 mb-3">Completa el siguiente formulario y me pondré en contacto lo antes posible. Muchas gracias.</p>
             <div class="login-box p-3 rounded-5 mb-5 m-auto">
-                <form action="#" method="post">
+                <form name="contact" action="#" method="post" netlify onsubmit="return validarFormulario()">
                     <div class="user-box">
                         <input type="text" name="name" minlength="5" maxlength="30" id="name" required autocomplete="off">
                         <label for="name">Nombre</label>
@@ -122,6 +122,7 @@
     <!--BOOTSTRAP  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <!-- JS -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init({
@@ -130,5 +131,6 @@
         </script>
     <script src="./js/technologies.js"></script>
     <script src="./js/projects.js"></script>
+    <script src="./js/validation-form.js"></script>
 </body>
 </html>
