:hammer: change attribute form

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <h2 class="title-h2 fs-1 mb-3">Contacto</h2>
             <p class="text-white-50 mb-3">Completa el siguiente formulario y me pondré en contacto lo antes posible. Muchas gracias.</p>
             <div class="login-box p-3 rounded-5 mb-5 m-auto">
-                <form name="contact" action="#" method="post" data-netlify="true" onsubmit="return validarFormulario()">
+                <form name="contact" method="POST" netlify onsubmit="return validarFormulario()">
                     <div class="user-box">
                         <input type="text" name="name" minlength="5" maxlength="30" id="name" required autocomplete="off">
                         <label for="name">Nombre</label>
