:art: add new project and form validations

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <div class="login-box p-3 rounded-5 mb-5 m-auto">
                 <form name="contact" action="./pages/send-form.html" method="POST" netlify onsubmit="return validateForm()">
                     <div class="user-box">
-                        <input type="text" name="name" minlength="5" maxlength="30" id="name" required autocomplete="off">
+                        <input type="text" name="name" minlength="2" maxlength="20" id="name" required autocomplete="off">
                         <label for="name">Nombre</label>
                     </div>
                     <div class="user-box">
@@ -102,12 +102,12 @@
                         <label for="email">Dirección de correo electrónico</label>
                     </div>
                     <div class="user-box">
-                        <input type="text" name="case" id="case" minlength="5" maxlength="30" required autocomplete="off">
+                        <input type="text" name="case" id="case" minlength="2" maxlength="20" required autocomplete="off">
                         <label for="case">Asunto</label>
                     </div>
                     <div class="user-box">
-                        <textarea name="message" id="message" cols="30" rows="5" required autocomplete="off"></textarea>
-                        <label for="message">Deja tu mensaje aquí...</label>
+                        <textarea name="message" id="message" maxlength="250" cols="30" rows="5" required autocomplete="off"></textarea>
+                        <label for="message">Deja tu mensaje aquí</label>
                     </div>
                     <div>
                         <input type="submit" class="btn" value="Enviar">
