--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Franco Javier Nieva">
-    <meta name="description" content="¡Bienvenido a mi Portafolio!. Soy Franco Javier Nieva, explora mis proyectos personales y grupales. Conoce mi formación académica y mucho más.">
+    <meta name="description"
+        content="¡Bienvenido a mi Portafolio!. Soy Franco Javier Nieva, explora mis proyectos personales y grupales. Conoce mi formación académica y mucho más.">
     <!--BOOTSTRAP  -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <!-- FAVICON -->
     <link rel="shortcut icon" href="./img/foto-perfil.png" type="image/x-icon">
@@ -24,77 +27,90 @@
     <!-- TITLE -->
     <title>Portafolio - Franco Javier Nieva</title>
 </head>
+
 <body>
     <header class="d-flex flex-column justify-content-md-center pt-2">
         <nav class="navbar navbar-expand-lg mb-1 mb-lg-5">
             <div class="container-fluid container-md">
                 <div class="container-fluid d-flex justify-content-between align-items-center ">
-                    <a class="navbar-brand" href="./index.html"><img src="./img/foto-perfil.png" alt="Foto de perfil de Franco Nieva" title="Nieva Franco Javier" class="rounded-circle  nav-img"></a>
-                    <button class="navbar-toggler bg-light border-0" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                    <a class="navbar-brand" href="./index.html"><img src="./img/foto-perfil.png"
+                            alt="Foto de perfil de Franco Nieva" title="Nieva Franco Javier"
+                            class="rounded-circle  nav-img"></a>
+                    <button class="navbar-toggler bg-light border-0" data-bs-toggle="collapse"
+                        data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
                     </button>
                 </div>
                 <div class="collapse navbar-collapse text-center w-100 rounded-4" id="navbarNav">
                     <ul class="navbar-nav d-lg-flex justify-content-lg-between align-items-lg-center w-100">
                         <li class="nav-item m-2">
-                            <a class="nav-link" href="#aboutMe">Sobre mi</a>
+                            <a class="nav-link fw-semibold" href="#aboutMe">Sobre mi</a>
                         </li>
                         <li class="nav-item m-2">
-                            <a class="nav-link" href="#technologies">Conocimientos y Tecnologías</a>
+                            <a class="nav-link fw-semibold" href="#technologies">Conocimientos y Tecnologías</a>
                         </li>
                         <li class="nav-item m-2">
-                            <a class="nav-link" href="#project">Proyectos</a>
+                            <a class="nav-link fw-semibold" href="#project">Proyectos</a>
                         </li>
                         <li class="nav-item m-2">
-                            <a class="nav-link" href="#contact">Contacto</a>
+                            <a class="nav-link fw-semibold" href="#contact">Contacto</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
-        <section class="presentation-container container-lg d-lg-flex justify-content-lg-evenly align-items-lg-center pt-3 pt-lg-5 pb-lg-5">
+        <section
+            class="presentation-container container-lg d-lg-flex justify-content-lg-evenly align-items-lg-center pt-3 pt-lg-5 pb-lg-5">
             <div class="presentation-info container-lg">
                 <h1 class="hello">¡Hola!</h1>
-                <h2 class="my-name-title">Soy Franco Javier Nieva</h2>
-                <p class="mb-0">Estudiante Universitario</p>
+                <h2 class="my-name-title mb-2">Soy Franco Javier Nieva</h2>
                 <p>Estudiante Full Stack Developer</p>
                 <figure class="links-container">
-                    <a href="https://github.com/francojnieva" target="_blank" title="Github"><img class="logo-github" src="./img/github-icon.svg" alt="logo de github" ></a>
-                    <a href="https://www.linkedin.com/in/francojnieva" target="_blank" title="LinkedIn"><img src="./img/linkedin-icon.svg" alt="logo de linkedin"></a>
-                    <a href="https://www.instagram.com/franconieva.97" target="_blank" title="Instagram"><img src="./img/instagram-icon.svg" alt="logo de instagram"></a>
-                    <a href="mailto:franco97nieva@gmail.com" target="_blank" title="Gmail"><img src="./img/gmail-icon.svg" alt="logo de correo gmail"></a>
+                    <a href="https://github.com/francojnieva" target="_blank" title="Github"><img class="logo-github"
+                            src="./img/github-icon.svg" alt="logo de github"></a>
+                    <a href="https://www.linkedin.com/in/francojnieva" target="_blank" title="LinkedIn"><img
+                            src="./img/linkedin-icon.svg" alt="logo de linkedin"></a>
+                    <a href="https://www.instagram.com/franconieva.97" target="_blank" title="Instagram"><img
+                            src="./img/instagram-icon.svg" alt="logo de instagram"></a>
+                    <a href="mailto:franco97nieva@gmail.com" target="_blank" title="Gmail"><img
+                            src="./img/gmail-icon.svg" alt="logo de correo gmail"></a>
                 </figure>
                 <div class="m-4 m-lg-0">
                     <a download href="" class="btn"><i class="bi bi-file-earmark-person"></i> Descargar CV</a>
                 </div>
             </div>
             <div class="presentation-photo d-flex justify-content-center">
-                <img src="./img/foto-perfil.png" alt="Foto de perfil de Franco Nieva"
-                title="Nieva Franco Javier">
+                <img src="./img/foto-perfil.png" alt="Foto de perfil de Franco Nieva" title="Nieva Franco Javier">
             </div>
         </section>
     </header>
     <main class="container container-main">
         <section class="text-center about-me-container mb-4 container" id="aboutMe">
             <h2 class="fs-1 title-h2 mt-5 mb-4">Sobre mi</h2>
-            <p>Soy de la provincia de Tucumán - Argentina. Estudiante en Rolling Code School en el curso de Full Stack Developer MERN.</p>
-            <p>Responsable, disciplinado, empático, me gusta trabajar en equipo y aprender de los demás. Aspiro a poder conseguir mi primer trabajo en el mundo IT que tanto me apasiona.</p>
+            <p class="text-white">Soy de la provincia de Tucumán - Argentina. Estudiante en Rolling Code School en el curso de Full Stack Developer.</p>
+            <p class="mb-lg-5 text-white">Responsable, disciplinado, empático, me gusta trabajar en equipo y aprender de los demás. Aspiro a poder conseguir mi primer trabajo en el mundo IT que tanto me apasiona.</p>
         </section>
         <section class="text-center" id="technologies">
             <h2 class="title-h2 fs-1 mt-4 mb-4">Conocimientos y Tecnologías</h2>
-            <article id="technologies-container" data-aos="fade-up" class="d-flex flex-wrap justify-content-evenly gap-3 pt-2 "></article>
+            <article id="technologies-container" data-aos="fade-up"
+                class="d-flex flex-wrap justify-content-evenly gap-3 pt-2 ">
+            </article>
         </section>
         <section class="text-center" id="project">
             <h2 class="title-h2 fs-1 mt-4 mb-4">Proyectos</h2>
-            <article id="project-container" class="p-2 d-lg-flex gap-lg-3 flex-lg-wrap justify-content-lg-around"></article>
+            <article id="project-container" class="p-2 d-lg-flex gap-lg-3 flex-lg-wrap justify-content-lg-around">
+            </article>
         </section>
         <section class="text-center" id="contact">
             <h2 class="title-h2 fs-1 mb-3">Contacto</h2>
-            <p class="text-white-50 mb-3">Completa el siguiente formulario y me pondré en contacto lo antes posible. Muchas gracias.</p>
-            <div class="login-box p-3 rounded-5 mb-5 m-auto">
-                <form name="contact" action="./pages/send-form.html" method="POST" netlify onsubmit="return validateForm()">
+            <p class="text-white mb-3">Complete el siguiente formulario y me pondré en contacto lo antes posible. ¡Muchas gracias!.</p>
+            <div class="login-box p-3 rounded-4 mb-5 m-auto">
+                <form name="contact" action="./pages/send-form.html" method="POST" netlify
+                    onsubmit="return validateForm()">
                     <div class="user-box">
-                        <input type="text" name="name" minlength="2" maxlength="20" id="name" required autocomplete="off">
+                        <input type="text" name="name" minlength="2" maxlength="20" id="name" required
+                            autocomplete="off">
                         <label for="name">Nombre</label>
                     </div>
                     <div class="user-box">
@@ -102,11 +118,13 @@
                         <label for="email">Dirección de correo electrónico</label>
                     </div>
                     <div class="user-box">
-                        <input type="text" name="case" id="case" minlength="2" maxlength="20" required autocomplete="off">
+                        <input type="text" name="case" id="case" minlength="2" maxlength="20" required
+                            autocomplete="off">
                         <label for="case">Asunto</label>
                     </div>
                     <div class="user-box">
-                        <textarea name="message" id="message" maxlength="250" cols="30" rows="5" required autocomplete="off"></textarea>
+                        <textarea name="message" id="message" maxlength="250" cols="30" rows="5" required
+                            autocomplete="off"></textarea>
                         <label for="message">Deja tu mensaje aquí</label>
                     </div>
                     <div>
@@ -116,11 +134,23 @@
             </div>
         </section>
     </main>
-    <footer class="text-center p-3 text-white bg-gradient">
-        <small>Desarrollado por Franco Javier Nieva - 2023</small>
+    <footer class="p-3 text-white bg-gradient d-flex flex-column justify-content-center align-items-center flex-lg-row justify-content-lg-between">
+        <small class="ps-lg-4">Desarrollado por Franco Javier Nieva - 2023</small>
+        <div class="links-container pe-lg-4">
+            <a href="https://github.com/francojnieva" target="_blank" title="Github"><img class="logo-github"
+                src="./img/github-icon.svg" alt="logo de github"></a>
+            <a href="https://www.linkedin.com/in/francojnieva" target="_blank" title="LinkedIn"><img
+                src="./img/linkedin-icon.svg" alt="logo de linkedin"></a>
+            <a href="https://www.instagram.com/franconieva.97" target="_blank" title="Instagram"><img
+                src="./img/instagram-icon.svg" alt="logo de instagram"></a>
+            <a href="mailto:franco97nieva@gmail.com" target="_blank" title="Gmail"><img src="./img/gmail-icon.svg"
+                alt="logo de correo gmail"></a>
+        </div>
     </footer>
     <!--BOOTSTRAP  -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
     <!-- JS -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
@@ -128,9 +158,10 @@
         AOS.init({
             duration: 1000
         });
-        </script>
+    </script>
     <script src="./js/technologies.js"></script>
     <script src="./js/projects.js"></script>
     <script src="./js/validation-form.js"></script>
 </body>
+
 </html>
